--- a/react-fundamental/src/exercise/01.html
+++ b/react-fundamental/src/exercise/01.html
@@ -17,3 +17,22 @@
 <!-- 🐨 Append the div to the root div using `append` -->
 <!--   💰 document.getElementById('root') -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Exercise 01 - React Fundamentals</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module">
+      const rootElement = document.getElementById('root')
+      const helloWorldElement = document.createElement('div')
+      helloWorldElement.innerHTML = 'Hello World'
+      rootElement.append(helloWorldElement)
+    </script>
+  </body>
+</html>
