add: react-fundamentals exercise 01-extra

--- a/react-fundamental/src/exercise/01-0.html
+++ b/react-fundamental/src/exercise/01-0.html
@@ -27,13 +27,12 @@
     <title>Exercise 01 - React Fundamentals</title>
   </head>
   <body>
+    <div id="root"></div>
     <script type="module">
-      const rootElement = document.createElement('div')
-      rootElement.setAttribute('id', 'root')
+      const rootElement = document.getElementById('root')
       const helloWorldElement = document.createElement('div')
       helloWorldElement.innerHTML = 'Hello World'
       rootElement.append(helloWorldElement)
-      document.body.append(rootElement)
     </script>
   </body>
 </html>
