--- a/react-fundamental/src/exercise/02.html
+++ b/react-fundamental/src/exercise/02.html
@@ -10,10 +10,7 @@
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
   -->
 
-  <script type="module">
-    const rootElement = document.getElementById('root')
-
-    // You're going to re-implement this code using React!
+  <!-- // You're going to re-implement this code using React!
     // 💣 So go ahead and delete this implementation (or comment it out for now)
     // These three lines are similar to React.createElement
     const element = document.createElement('div')
@@ -24,6 +21,13 @@
 
     // 🐨 Please re-implement the regular document.createElement code above
     // with these React API calls
-    // 💰 The example in the markdown file should be a good hint for you.
+    // 💰 The example in the markdown file should be a good hint for you. -->
+
+  <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
+  <script type="module">
+    const rootElement = document.getElementById('root')
+    const reactElement = React.createElement('div', {children: 'Hello World'})
+    ReactDOM.render(reactElement, rootElement)
   </script>
 </body>
