add: react-fundamentals exercise 04-extra-1

--- a/react-fundamentals/src/exercise/04.1.html
+++ b/react-fundamentals/src/exercise/04.1.html
@@ -17,8 +17,8 @@
     const message = ({children}) => <div>{children}</div>
     const element = (
       <div className="container">
-        {React.createElement(message, {children: 'Hello World'})}
-        {React.createElement(message, {children: 'Goodbye World'})}
+        {message({children: 'Hello World'})}
+        {message({children: 'Goodbye World'})}
       </div>
     )
     ReactDOM.render(element, document.getElementById('root'))
