--- a/react-fundamentals/src/exercise/04.1.html
+++ b/react-fundamentals/src/exercise/04.1.html
@@ -14,11 +14,11 @@
   <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
   <script type="text/babel">
-    const Message = ({children}) => <div>{children}</div>
+    const message = ({children}) => <div>{children}</div>
     const element = (
       <div className="container">
-        <Message>Hello World</Message>
-        <Message children="Goodbye World" />
+        {React.createElement(message, {children: 'Hello World'})}
+        {React.createElement(message, {children: 'Goodbye World'})}
       </div>
     )
     ReactDOM.render(element, document.getElementById('root'))
