--- a/react-fundamentals/src/exercise/02.html
+++ b/react-fundamentals/src/exercise/02.html
@@ -1,40 +1,29 @@
 <!-- Intro to raw React APIs -->
 <!-- http://localhost:3000/isolated/exercise/02.html -->
 
-<!-- 🐨 add React and ReactDOM on the page.
+<body>
+  <div id="root"></div>
+
+  <!-- 🐨 add React and ReactDOM on the page.
        💰 Here are script tags that'll do the job:
-  <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/react@18.1.0/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@18.1.0/umd/react-dom.development.js"></script>
   -->
 
-<!-- // You're going to re-implement this code using React!
+  <script type="module">
+    const rootElement = document.getElementById('root')
+
+    // You're going to re-implement this code using React!
     // 💣 So go ahead and delete this implementation (or comment it out for now)
     // These three lines are similar to React.createElement
     const element = document.createElement('div')
     element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
     element.className = 'container' // 💰 in React, this is also called the "className" prop
-    // This is similar to ReactDOM.render
+    // This is similar to ReactDOM.createRoot().render()
     rootElement.append(element)
 
     // 🐨 Please re-implement the regular document.createElement code above
     // with these React API calls
-    // 💰 The example in the markdown file should be a good hint for you. -->
-
-<body>
-  <div id="root"></div>
-  <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
-  <script type="module">
-    const rootElement = document.getElementById('root')
-    const helloElement = React.createElement('span', null, 'Hello')
-    const worldElement = React.createElement('span', {children: 'World'})
-    const containerElement = React.createElement(
-      'div',
-      {className: 'container'},
-      helloElement,
-      ' ',
-      worldElement,
-    )
-    ReactDOM.render(containerElement, rootElement)
+    // 💰 The example in the markdown file should be a good hint for you.
   </script>
 </body>
