--- a/react-fundamentals/src/exercise/04.html
+++ b/react-fundamentals/src/exercise/04.html
@@ -1,26 +1,24 @@
 <!-- Creating custom components -->
 <!-- http://localhost:3000/isolated/exercise/04.html -->
 
-<!-- 
-// 🐨 Make a function called `message` which returns the JSX we want to share
-// 🐨 use that function in place of the divs below with:
-// 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})} 
-// 💯 This is only the first step to making actual React components. The rest is in the extra credit!
--->
-
 <body>
   <div id="root"></div>
-  <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/react@18.1.0/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@18.1.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
   <script type="text/babel">
-    const Message = ({children}) => <div>{children}</div>
+    // 🐨 Make a function called `message` which returns the JSX we want to share
+
+    // 🐨 use that function in place of the divs below with:
+    // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
     const element = (
       <div className="container">
-        <Message>Hello World</Message>
-        <Message children="Goodbye World" />
+        <div className="message">Hello World</div>
+        <div className="message">Goodbye World</div>
       </div>
     )
-    ReactDOM.render(element, document.getElementById('root'))
+
+    // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
+    ReactDOM.createRoot(document.getElementById('root')).render(element)
   </script>
 </body>
